<resources>
    <string name="app_name">QuizApp3</string>
    <string name="welcome_text">Welcome to the USA Quiz!</string>
    <string name="name_question_text">Enter your name in the box below:</string>
    <string name="magna_sigi">Magna Sigi</string>
    <string name="question_one">(1 Point) Question One: Who was the first president of the United States?</string>
    <string name="thomas_jefferson">Thomas Jefferson</string>
    <string name="george_washington">George Washington</string>
    <string name="john_adams">John Adams</string>
    <string name="benjamin_franklin">Benjamin Franklin</string>
    <string name="question_two">(1 Point) Question Two: Which of these are the founding fathers of the United States?</string>
    <string name="james_madison">James Madison</string>
    <string name="abraham_lincoln">Abraham Lincoln</string>
    <string name="alexander_mackenzie">Alexander Mackenzie</string>
    <string name="question_three">(1 Point) Question Three: How many stars are there in the flag of the USA?</string>
    <string name="question_four">(1 Point) Question Four: Which country is on the north of the United States?</string>
    <string name="option_q3r1">49</string>
    <string name="option_q3r2">50</string>
    <string name="option_q3r3">60</string>
    <string name="option_q3r4">22</string>
    <string name="france">france</string>
    <string name="question_extra_credit">(0 Point) Extra Credit Question: Any comments or suggestions?</string>
    <string name="hint_extra_credit">Nice App!</string>
    <string name="score">SCORE</string>
    <string name="share">SHARE</string>
</resources>
